--- a/pages/scholarship.html
+++ b/pages/scholarship.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Scholarship # -> was 'Research', no 'scholarship' page exists yet
-permalink: /research/
+title: Scholarship # -> was 'Research','scholarship' page now exists
+permalink: /scholarship/
 nav: true
 order: 3
 status: 1/2 done
@@ -15,7 +15,7 @@ notes:
 <div class="research-landing-wrapper">
 	<div class="research-landing-grid">
 		<div class="research-landing__page-title" aria-label="Landing page">
-			<div class="research-title__text">Research</div>
+			<div class="research-title__text">Scholarship</div>
 		</div>
 		<div class="research-landing__lines1">
 			<div></div>
