Finishes lots o content...
Changes scholarship/research => “work” (#263), finishes Amanda going
through all static page text except as noted in open issues (#213)

--- a/index.html
+++ b/index.html
@@ -32,16 +32,13 @@ notes:
 	<div class="home__faq">
 		<div class="home-faq__title">Frequently<br/>Asked<br/>Questions</div>
 		<div class="home-faq__content">
-			<div class="home-faq__subtitle">Curious about digital humanities and the Scholars' Lab? Check out answers to common questions:</div>
+			<div class="home-faq__subtitle">Check out <a href="/about">answers to common questions</a> including:</div>
 			<div class="home-faq__questions">
-				<div><a href="#">What is the Scholars' Lab?</a></div>
-				<div><a href="#">How can the Scholars' Lab fit into my work?</a></div>
-				<div><a href="#">How does the Lab fit into the UVA Library?</a></div>
-				<div><a href="#">What is digital humanities (DH)?</a></div>
-				<div><a href="#">What is cultural heritage informatics (CHI)?</a></div>
-				<div><a href="#">What is GIS?</a></div>
+				<div><a href="/about#what-is-the-scholars-lab">What is the Scholars' Lab?</a></div>
+				<div><a href="/about#how-can-the-scholars-lab-fit-into-my-work">How can you fit into my work?</a></div>
+				<div><a href="/about#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></div>
 			</div>
-			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="#">FAQ Home</a></div>
+			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="about">About Scholars' Lab</a></div>
 		</div>
 	</div>
 
