Closes #255 ghost links (wrong href="#")

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ notes:
 
 	<div class="home__contact--1">
 		<div class="home-contact__title">Contact Us</div>
-		<div class="home-contact__content">Curious? Please get in touch with us—absolutely no prior experience or fully formed ideas needed!<br><br>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions, head right to our <a href="#">consultation request form</a> if you know you want to meet with us, or sign up below to hear about events and opportunities.
+		<div class="home-contact__content">Curious? Please get in touch with us—absolutely no prior experience or fully formed ideas needed!<br><br>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions or if you know you want to meet with us, or sign up below to hear about events and opportunities.
 <div>
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -76,7 +76,7 @@ notes:
 	<div class="home__students">
 		<div class="home-students__title">Student<br/>Opportunities</div>
 		<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital scholarship practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.<br/><br/>From the innovative <a href="http://praxis.scholarslab.org/">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
-		<div class="home-students__cta"><a href="#">See All<!--Student Opportunities Home--></a></div>
+		<div class="home-students__cta"><a href="/student-opportunities">See All<!--Student Opportunities Home--></a></div>
 	</div>
 	
 	<div class="home__office-hours">
@@ -104,7 +104,7 @@ notes:
 			<span>Fridays:</span>1-5pm
 		</div>
 		<div class="home-makerspace__text"><!-- Insert short description, a pic, and event preview, or whatever @Shane et al. find useful --><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.<br/><br/>Find things like 3-D printing, wearable technologies, physical computing, & more at <strong>our space <!--a href="#"-->in the middle of the Scholars' Lab Common Area<!--/a-->.</strong></div>
-		<div class="home-makerspace__cta"><a href="#">Makerspace Home</a></div>
+		<div class="home-makerspace__cta"><a href="/makerspace">Makerspace Home</a></div>
 	</div>
 
 	<div class="home__gis-corner">
@@ -116,7 +116,7 @@ notes:
 	
 	<div class="home__events">
 		<div class="home-events__title">Events</div>
-		<div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="#" aria-label="Events page">here</a>.</div>
+		<div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="/events" aria-label="Events page">here</a>.</div>
 	</div>
 
 	<div class="home__learn">
@@ -141,36 +141,36 @@ notes:
 
 	<div class="home__people">
 		<div class="home-people__title">Our People</div>
-		<div class="home-people__content">Like we said, our digital humanities is people. Meet the folks who give this place its soul&mdash;and its abundance of dog memes.<br/><a href="#" aria-label="Link to 'People' page">Find them here.</a></div>
+		<div class="home-people__content">Like we said, our digital humanities is people. Meet the folks who give this place its soul&mdash;and its abundance of dog memes.<br/><a href="/people" aria-label="Link to 'People' page">Find them here.</a></div>
 	</div>
 
 	<div class="home__origin-stories">
 		<div class="home-origins__title">Origin Stories</div>
-		<div class="home-origins__content"><span>"How did you... end up in digital humanities?" </span>Most of our answers are closer to a spiral than a straight line. Insert words about some of us started in history or English or econ and tumbled from there, and it's relevant because you the user might be nervous that everyone got there in a straight line. Give a couple of <a href="#">funny hints</a> about anecdotes that link to <a href="#">specific people's</a> pages. Check out the full round-up <a href="#">here</a>.</div>
+		<div class="home-origins__content"><span>"How did you... end up in digital humanities?" </span>Most of our answers are closer to a spiral than a straight line. Insert words about some of us started in history or English or econ and tumbled from there, and it's relevant because you the user might be nervous that everyone got there in a straight line. Give a couple of <a href="#">funny hints</a> about anecdotes that link to <a href="/people">specific people's</a> pages. Check out the full round-up <a href="/people">here</a>.</div>
 	</div>
 
 	<div class="home__blog">
 		<div class="home-blog__title">Our Blog</div>
-		<div class="home-blog__content">Preview a few recent posts here. <a href="#" aria-label="Blog home">Check out</a> what we're writing about/thinking/doing.</div>
+		<div class="home-blog__content">Preview a few recent posts here. <a href="/blog" aria-label="Blog home">Check out</a> what we're writing about/thinking/doing.</div>
 	</div>
 
 	<div class="home__staffer-projects">
 		<div class="home-projects__title">Staffer Projects</div>
-		<div class="home-projects__content"><span>See what our staff is passionate about.</span><a href="#" aria-label="Staffer projects home">Insert link words.</a></div>
+		<div class="home-projects__content"><span>See what our staff is passionate about.</span><a href="/work" aria-label="Staffer projects home">Insert link words.</a></div>
 	</div>
 
 	<div class="home__contact--2" title="SLab casual: just shirt, shoes, & curiosity required">
 		<div class="home-contact2__title">Let's meet up.</div>
-		<div class="home-contact2__content">Come set up a <a href="#">consultation</a> with us. Very casual. Something something if you have a project and wanna fit DH into it, or something something no pressure other reason. <span>Just fill out the form found <a href="#">here</a>.</div>
+		<div class="home-contact2__content">Come set up a <a href="mailto:scholarslab@virginia.edu">consultation</a> with us. Very casual. Something something if you have a project and wanna fit DH into it, or something something no pressure other reason.</div>
 	</div>
 	
 	<div class="home__charter-link">
 		<div class="home-charter__title">Our Charter</div>
-		<div class="home-charter__content">We do our best to put action into <a href="#">our values</a>, but we can always do better. Read about our mission and help us shape the digital humanities we want to see.</div>
+		<div class="home-charter__content">We do our best to put action into <a href="/charter">our values</a>, but we can always do better. Read about our mission and help us shape the digital humanities we want to see.</div>
 	</div>
 
 	<div class="home__colophon">
 		<div class="home-colophon__title">Colophon</div>
-		<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, (er, website) gets made. We're pretty proud of the <a href="#" aria-label="Colophon page">ingredients.</a></div>
+		<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, (er, website) gets made. We're pretty proud of the <a href="/colophpn" aria-label="Colophon page">ingredients.</a></div>
 	</div>
 </div>
