--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -63,8 +63,8 @@ notes:
 		<div class="spatial-mission__title">What We Do</div>
 		<!-- insert relevant links in this text: -->
 		<div class="spatial-mission__text">
-			<p>We specialize in a wide-range of methods in spatial analysis related to <a href="#">mapping</a> and the collection of <a href="#">cultural heritage data</a>, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom.</p>
-			<p>We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own <a href="#">Neatline exhibit-builder</a> for storytelling in the humanities, and more.</p>
+			<p>We specialize in a wide-range of methods in spatial analysis related to mapping and the collection, use, and preservation of cultural heritage data, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom.</p>
+			<p>We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own <a href="http://neatline.org">Neatline exhibit-builder</a> for storytelling in the humanities, and more.</p>
 		</div>
 	</div>
 
@@ -239,7 +239,7 @@ notes:
 			<li>
 				<div class="spatial-workshop__ws-title"><a href="{{ site.baseurl }}/events/{{ event.slug }}">{{ event.title }}</a></div>
 				<div class="spatial-workshop__logistics">Some sort of brief logistical info&mdash;a sentence description if the title isn't particularly illuminating, or the when/where info if doesn't change.</div>
-				<div class="spatial-workshop__cta"><a href="#">See More &rsaquo;</a></div> <!-- link to events page -->
+				<div class="spatial-workshop__cta"><a href="/events">See More &rsaquo;</a></div> <!-- link to events page -->
 			</li>
 			{% endfor %}
 			{% endif %}
