--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@ notes:
 
 	<div class="home__colophon">
 		<div class="home-colophon__title">Colophon</div>
-		<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, (er, website) gets made. We're pretty proud of the <a href="/colophpn" aria-label="Colophon page">ingredients.</a></div>
+		<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, (er, website) gets made. We're pretty proud of the <a href="/colophon" aria-label="Colophon page">ingredients.</a></div>
 	</div>
 </div>
