YES workin (#40 minus YAML work)
Just need to go through /_people and update YAML in each file. Logic
works on /people.html, will need to update logic in other places too

--- a/pages/people.html
+++ b/pages/people.html
@@ -152,9 +152,11 @@ notes:
       			<li>{{ item }}</li>
 					{% endif %}
 					{% unless item contains ',' %}
-      			<li>Former {{ item }}</li>	
+      			<li>Former {{ person.position }}</li>	
 					{% endunless %}
+				{% endfor %}
   				{% endunless %}
+
             </ul>
           </a>
         </div>
