--- a/version-2.html
+++ b/version-2.html
@@ -81,10 +81,10 @@ permalink: /home-new/
 					</div>
 					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 					<!--End mc_embed_signup-->
-					</div>
-				</div>
-			</div>
-		</section>
+					</div> <!-- end signup wrapper -->
+				</div> <!-- end newsletter -->
+			</div> <!-- end contact content -->
+		</section> <!-- end contact -->
 
 		<!-- section 2: -->
 
