Add events description from old homepage, but comment out
- Didn't have a description in this one - is unclear to me whether
  we need one?

- Am including the markup and added a note saying anyone is welcome
  to re-insert it if we do want it

--- a/version-2.html
+++ b/version-2.html
@@ -105,6 +105,8 @@ permalink: /home-new/
 		<!-- events: -->
 		<section class="v2__events">
 			<div class="v2-events__title">Events</div>
+			<!-- !! NB: events description is commented out; feel free to un-comment out if we want to use it -->
+			<!--div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="/events" aria-label="Events page">here</a>.</div-->
 			<div class="v2-events__upcoming">
 				<div></div>
 				<div></div>
