Update content w/ Amanda's most recent changes (mostly links)
- All ghost links fixed (yayayayay)

- Plus wording on contact section, since we don't have a consultation
  form yet, so we just now say to email either way

--- a/version-2.html
+++ b/version-2.html
@@ -52,7 +52,7 @@ permalink: /home-new/
 
 			<div class="v2-contact__wrapper">
 				<div class="v2-contact__content">
-					<p>Curious? Please get in touch with us—absolutely no prior experience or fully formed ideas needed!</p><p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions, head right to our <a href="#">consultation request form</a> if you know you want to meet with us, or sign up below to hear about events and opportunities.</p>
+					<p>Curious? Please get in touch with us—absolutely no prior experience or fully formed ideas needed!</p><p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions or if you know you want to meet with us, or sign up below to hear about events and opportunities.</p>
 				</div>
 
 				<div class="v2-contact__newsletter">
@@ -112,7 +112,7 @@ permalink: /home-new/
 				<div></div>
 				<div></div>
 			</div>
-			<div class="v2-events__cta"><a href="#">All Events</a></div>
+			<div class="v2-events__cta"><a href="/events">All Events</a></div>
 		</section>
 
 		<!-- open office hours: -->
@@ -135,7 +135,7 @@ permalink: /home-new/
 				</div>
 			</div>
 			<div class="v2-student__img" title="Placeholder image"></div>
-			<div class="v2-student__cta"><a href="#">See All</a></div>
+			<div class="v2-student__cta"><a href="/student-opportunities">See All</a></div>
 		</section>
 
 		<!-- makerspace -->
@@ -153,7 +153,7 @@ permalink: /home-new/
 				<p><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
 				<p>Find things like 3-D printing, wearable technologies, physical computing, & more at <strong>our space in the middle of the Scholars' Lab Common Area.</strong></p>
 			</div>
-			<div class="v2-maker__cta"><a href="#">Makerspace Page ></a></div>
+			<div class="v2-maker__cta"><a href="/makerspace">Makerspace Home</a></div> <!-- had it as "Makerspace Page >" for a bit -->
 		</section>
 
 		<!-- spatial tech: -->
@@ -171,7 +171,7 @@ permalink: /home-new/
 				<li>Office: 417 Alderman</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 			</ul>
-			<div class="v2-spatial__cta"><a href="#">Spatial Tech Page ></a></div>
+			<div class="v2-spatial__cta"><a href="/spatial-technologies">Spatial Tech Home</a></div>
 		</section> <!-- end sections -->
 	</main> <!-- end main content -->
 </article> <!-- end wrapper -->
