Change embedded em dashes to HTML entity -> "&mdash;"
- It was loading as "â€”" in git gui sooo just wanted to play it safe,
  encoding-wise

--- a/version-2.html
+++ b/version-2.html
@@ -25,7 +25,7 @@ permalink: /home-new/
 			<div class="v2-hero__description">
 				<h3>Explore With Us</h3>
 				<p>At the Scholars' Lab, our most important digital humanities project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span></p>
-				<p>Come help us explore what that means—we'd love you to be a part of our community! We're the UVA Library's lab for experimental and digital research, teaching, and other forms of scholarship, open to all disciplines and anyone curious about getting their hands dirty.</p>
+				<p>Come help us explore what that means&mdash;we'd love you to be a part of our community! We're the UVA Library's lab for experimental and digital research, teaching, and other forms of scholarship, open to all disciplines and anyone curious about getting their hands dirty.</p>
 			</div>
 		</div>
 	</header>
@@ -52,7 +52,7 @@ permalink: /home-new/
 
 			<div class="v2-contact__wrapper">
 				<div class="v2-contact__content">
-					<p>Curious? Please get in touch with us—absolutely no prior experience or fully formed ideas needed!</p><p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions or if you know you want to meet with us, or sign up below to hear about events and opportunities.</p>
+					<p>Curious? Please get in touch with us&mdash;absolutely no prior experience or fully formed ideas needed!</p><p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions or if you know you want to meet with us, or sign up below to hear about events and opportunities.</p>
 				</div>
 
 				<div class="v2-contact__newsletter">
