--- a/version-2.html
+++ b/version-2.html
@@ -4,25 +4,25 @@ title: Version 2
 permalink: /home-new/
 ---
 
-<div class="v2-navbar">
+<div class="home-navbar">
 	{% include navbar-2.html %}
 </div>
 
-<article class="v2-wrapper">
-	<header class="v2-landing-wrapper">
-		<div class="v2-landing__big-title">
-			<div class="v2-title__text">
+<article class="home-wrapper">
+	<header class="home-landing-wrapper">
+		<div class="home-landing__big-title">
+			<div class="home-title__text">
 				<!--span>Welcome<br/>to the<br/>Scholars'<br/>Lab.</span-->
 				<!--span>The<br/>Scholars'<br/>Lab is a<br/>community<br/>for experimental<br/>scholarship.</span-->
 				<span>We are<br/>a community<br/>for experimental<br/>scholarship.</span>
 			</div>
 		</div>
-		<div class="v2-landing__hero-text">
-			<div class="v2-hero__hook">
+		<div class="home-landing__hero-text">
+			<div class="home-hero__hook">
 				<h3>What We Do</h3>
 				<p>Experimental & digital scholarship in all fields, informed by humanities and cultural heritage approaches.</p>
 			</div> <!-- we practice? -->
-			<div class="v2-hero__description">
+			<div class="home-hero__description">
 				<h3>Explore With Us</h3>
 				<p>At the Scholars' Lab, our most important digital humanities project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span></p>
 				<p>Come help us explore what that means&mdash;we'd love you to be a part of our community! We're the UVA Library's lab for experimental and digital research, teaching, and other forms of scholarship, open to all disciplines and anyone curious about getting their hands dirty.</p>
@@ -30,32 +30,32 @@ permalink: /home-new/
 		</div>
 	</header>
 
-	<main class="v2-main-content">
+	<main class="home-main-content">
 
 		<!-- section 1: -->
 
 		<!-- faq: -->
-		<section class="v2__faq">
-			<div class="v2-faq__title">Frequently Asked Questions</div>
-			<div class="v2-faq__subtitle">Check out <a href="/about">answers to common questions</a> including:</div>
-			<div class="v2-faq__questions">
+		<section class="home__faq">
+			<div class="home-faq__title">Frequently Asked Questions</div>
+			<div class="home-faq__subtitle">Check out <a href="/about">answers to common questions</a> including:</div>
+			<div class="home-faq__questions">
 				<div><a href="/about#what-is-the-scholars-lab">What is the Scholars' Lab?</a></div>
 				<div><a href="/about#how-can-the-scholars-lab-fit-into-my-work">How can you fit into my work?</a></div>
 				<div><a href="/about#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></div>
 			</div>
-			<div class="v2-faq__cta"><!--Find answers to these questions and more:<br/--><a href="about">About Scholars' Lab</a></div>
+			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="about">About Scholars' Lab</a></div>
 		</section>
 
 		<!-- contact us: -->
-		<section class="v2__contact">
-			<div class="v2-contact__title">Contact Us</div>
+		<section class="home__contact">
+			<div class="home-contact__title">Contact Us</div>
 
-			<div class="v2-contact__wrapper">
-				<div class="v2-contact__content">
+			<div class="home-contact__wrapper">
+				<div class="home-contact__content">
 					<p>Curious? Please get in touch with us&mdash;absolutely no prior experience or fully formed ideas needed!</p><p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions or if you know you want to meet with us, or sign up below to hear about events and opportunities.</p>
 				</div>
 
-				<div class="v2-contact__newsletter">
+				<div class="home-contact__newsletter">
 					<div>
 					<!-- Begin MailChimp Signup Form -->
 					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -89,10 +89,10 @@ permalink: /home-new/
 		<!-- section 2: -->
 
 		<!-- find us: -->
-		<section class="v2__find-us">
-			<div class="v2-find__title">Find us</div>
-			<div class="v2-find__content">
-				<div class="v2-find__diagram">
+		<section class="home__find-us">
+			<div class="home-find__title">Find us</div>
+			<div class="home-find__content">
+				<div class="home-find__diagram">
 					<img src="{{ 'assets/img/svg/alderman-floorplan.svg' | relative_url }}" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="Alderman Floorplan - Floor 4">
 				</div>
 				<ul><span>Spaces:</span>
@@ -103,45 +103,45 @@ permalink: /home-new/
 		</section>
 
 		<!-- events: -->
-		<section class="v2__events">
-			<div class="v2-events__title">Events</div>
+		<section class="home__events">
+			<div class="home-events__title">Events</div>
 			<!-- !! NB: events description is commented out; feel free to un-comment out if we want to use it -->
 			<!--div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="/events" aria-label="Events page">here</a>.</div-->
-			<div class="v2-events__upcoming">
+			<div class="home-events__upcoming">
 				<div></div>
 				<div></div>
 				<div></div>
 			</div>
-			<div class="v2-events__cta"><a href="/events">All Events</a></div>
+			<div class="home-events__cta"><a href="/events">All Events</a></div>
 		</section>
 
 		<!-- open office hours: -->
-		<section class="v2__office-hours">
-			<div class="v2-hours__title">Open Office Hours</div>
-			<div class="v2-hours__when">Every Monday during fall and spring term,<br/>10am-11:30am.</div>
-			<div class="v2-hours__info">Stop by the discussion area just inside the Scholars' Lab Common Room to chat with our DH experts about your ideas, from your earliest questions and broad ideas through formal projects. (See diagram for where we are!)</div>
+		<section class="home__office-hours">
+			<div class="home-hours__title">Open Office Hours</div>
+			<div class="home-hours__when">Every Monday during fall and spring term,<br/>10am-11:30am.</div>
+			<div class="home-hours__info">Stop by the discussion area just inside the Scholars' Lab Common Room to chat with our DH experts about your ideas, from your earliest questions and broad ideas through formal projects. (See diagram for where we are!)</div>
 		</section>
 
 		<!-- section 3: -->
 
 		<!-- student opportunities: -->
-		<section class="v2__student-opps">
-			<div class="v2-student__content">
-				<div class="v2-student__title">Student Opportunities</div>
-				<div class="v2-student__text">
+		<section class="home__student-opps">
+			<div class="home-student__content">
+				<div class="home-student__title">Student Opportunities</div>
+				<div class="home-student__text">
 					<p>One of our primary missions is to support the work of emerging scholars and digital scholarship practitioners&mdash;particularly UVa graduate students.</p>
 					<p>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.</p>
 					<p>From the innovative <a href="http://praxis.scholarslab.org/">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</p>
 				</div>
 			</div>
-			<div class="v2-student__img" title="Placeholder image"></div>
-			<div class="v2-student__cta"><a href="/student-opportunities">See All</a></div>
+			<div class="home-student__img" title="Placeholder image"></div>
+			<div class="home-student__cta"><a href="/student-opportunities">See All</a></div>
 		</section>
 
 		<!-- makerspace -->
-		<section class="v2__makerspace">
-			<div class="v2-maker__title">Makerspace</div>
-			<div class="v2-maker__hours">
+		<section class="home__makerspace">
+			<div class="home-maker__title">Makerspace</div>
+			<div class="home-maker__hours">
 				<div>Staffed Hours</div>
 				<span>Mondays:</span>1-7pm<br/>
 				<span>Tuesdays:</span>1-9pm<br/>
@@ -149,21 +149,21 @@ permalink: /home-new/
 				<span>Thursdays:</span>1-9pm<br/>
 				<span>Fridays:</span>1-5pm
 			</div>
-			<div class="v2-maker__text">
+			<div class="home-maker__text">
 				<p><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
 				<p>Find things like 3-D printing, wearable technologies, physical computing, & more at <strong>our space in the middle of the Scholars' Lab Common Area.</strong></p>
 			</div>
-			<div class="v2-maker__cta"><a href="/makerspace">Makerspace Home</a></div> <!-- had it as "Makerspace Page >" for a bit -->
+			<div class="home-maker__cta"><a href="/makerspace">Makerspace Home</a></div> <!-- had it as "Makerspace Page >" for a bit -->
 		</section>
 
 		<!-- spatial tech: -->
-		<section class="v2__spatial-tech">
-			<div class="v2-spatial__title">Spatial Technologies</div>
-			<div class="v2-spatial__text">
+		<section class="home__spatial-tech">
+			<div class="home-spatial__title">Spatial Technologies</div>
+			<div class="home-spatial__text">
 				<p><strong>Experts at thinking about space+time.</strong></p>
 				<p>We've got experts in GIS and other mapping approaches (including our own <a href="http://neatline.org">Neatline</a> project for telling stories that combine timelines+maps), cultural heritage informatics, augmented reality, virtual reality, 3D modeling, photogrammetry and scanning, aerial footage, and more.</p>
 			</div>
-			<ul class="v2-spatial__hours">
+			<ul class="home-spatial__hours">
 				<h3>Cultural heritage informatics</h3>
 				<li>Hours: by appointment</li>
 				<li>Office: by appointment (Clemons is closed during Summer 2018)</li>
@@ -171,7 +171,7 @@ permalink: /home-new/
 				<li>Office: 417 Alderman</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 			</ul>
-			<div class="v2-spatial__cta"><a href="/spatial-technologies">Spatial Tech Home</a></div>
+			<div class="home-spatial__cta"><a href="/spatial-technologies">Spatial Tech Home</a></div>
 		</section> <!-- end sections -->
 	</main> <!-- end main content -->
 </article> <!-- end wrapper -->
