Update homepage layout: no-header -> default

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 ---
-layout: no-header
+layout: default
 title: Home
 ---
-
-<div class="home-navbar">
-	{% include navbar-2.html %}
-</div>
 
 <article class="home-wrapper">
 	<header class="home-landing-wrapper">
