--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Home
 			</div> <!-- we practice? -->
 			<div class="home-hero__description">
 				<h3>Explore With Us</h3>
-				<p>At the Scholars' Lab, our most important scholarship is our community: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what scholarship with an ethic of care means: we'd love you to be a part of our community!</p>
+				<p>At the Scholars' Lab, our most important scholarship is our community: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what scholarship with an ethic of care means—we'd love you to be part of our community! </p>
 			</div>
 		</div>
 	</header>
