Add Library section to homepage
- Add to grid layout in CSS & set up selectors appropriately

- Use Amanda's title & content from comments on #230, although change
  the wording of the last paragraph so that our link is more
  accessibly written

- Closes #230

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@ title: Home
 			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="about">About Scholars' Lab</a></div>
 		</section>
 
+		<!-- library: -->
+		<section class="home__library">
+			<div class="home-lib__title">The Library's Lab</div>
+			<div class="home-lib__content">
+				<p>We are the UVA Library's lab for experimental and digital research, teaching, and other forms of scholarship, open to all disciplines and anyone curious about getting their hands dirty.</p>
+				<p>We're part of the UVA Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
+				<!-- **ACCESSIBILITY NOTE:** changing link wording to be more descriptive -->
+				<p>Visit our <a href="/library">Library collaborations hub</a> to find out about the many ways we co-create with and depend on our amazing Library colleagues, or jump to the <a href="http://lib.virginia.edu">UVA Library's main website</a> to find out more about the whole Library.</p>
+				<!--p>Find out about the many ways we collaborate with and depend on our amazing Library colleagues <a href="/library" aria-label="Library page of Scholars' Lab">here</a>, or jump to the <a href="http://lib.virginia.edu">UVA Library's main website</a> to find out more about the whole Library.</p-->
+			</div>
+		</section>
+
 		<!-- contact us: -->
 		<section class="home__contact">
 			<div class="home-contact__title">Contact Us</div>
