Wrap all home section titles in links to those pages
- NB: if pages exist. A couple sections don't have pages.

- Closes #276, although not yet styled.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Home
 
 		<!-- faq: -->
 		<section class="home__faq">
-			<div class="home-faq__title">Frequently Asked Questions</div>
+			<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
 			<div class="home-faq__subtitle">Check out <a href="/about">answers to common questions</a> including:</div>
 			<div class="home-faq__questions">
 				<div><a href="/about#what-is-the-scholars-lab">What is the Scholars' Lab?</a></div>
@@ -42,7 +42,7 @@ title: Home
 
 		<!-- library: -->
 		<section class="home__library">
-			<div class="home-lib__title">The Library's Lab</div>
+			<div class="home-lib__title"><a href="/library">The Library's Lab</a></div>
 			<div class="home-lib__content">
 				<p>We are the UVA Library's lab for experimental and digital research, teaching, and other forms of scholarship, open to all disciplines and anyone curious about getting their hands dirty.</p>
 				<p>We're part of the UVA Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
@@ -58,7 +58,8 @@ title: Home
 
 			<div class="home-contact__wrapper">
 				<div class="home-contact__content">
-					<p>Curious? Please get in touch with us&mdash;absolutely no prior experience or fully formed ideas needed!</p><p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions or if you know you want to meet with us, or sign up below to hear about events and opportunities.</p>
+					<p>Curious? Please get in touch with us&mdash;absolutely no prior experience or fully formed ideas needed!</p>
+					<p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions or if you know you want to meet with us, or sign up below to hear about events and opportunities.</p>
 				</div>
 
 				<div class="home-contact__newsletter">
@@ -96,7 +97,7 @@ title: Home
 
 		<!-- find us: -->
 		<section class="home__find-us">
-			<div class="home-find__title">Find us</div>
+			<div class="home-find__title"><a href="/hours-and-spaces">Find us</a></div>
 			<div class="home-find__content">
 				<div class="home-find__diagram">
 					<img src="{{ 'assets/img/svg/alderman-floorplan.svg' | relative_url }}" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="Alderman Floorplan - Floor 4">
@@ -110,7 +111,7 @@ title: Home
 
 		<!-- events: -->
 		<section class="home__events">
-			<div class="home-events__title">Events</div>
+			<div class="home-events__title"><a href="/events">Events</a></div>
 			<!-- !! NB: events description is commented out; feel free to un-comment out if we want to use it -->
 			<!--div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="/events" aria-label="Events page">here</a>.</div-->
 			<div class="home-events__upcoming">
@@ -133,7 +134,7 @@ title: Home
 		<!-- student opportunities: -->
 		<section class="home__student-opps">
 			<div class="home-student__content">
-				<div class="home-student__title">Student Opportunities</div>
+				<div class="home-student__title"><a href="/student-opportunities">Student Opportunities</a></div>
 				<div class="home-student__text">
 					<p>One of our primary missions is to support the work of emerging scholars and digital scholarship practitioners&mdash;particularly UVa graduate students.</p>
 					<p>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.</p>
@@ -146,7 +147,7 @@ title: Home
 
 		<!-- makerspace -->
 		<section class="home__makerspace">
-			<div class="home-maker__title">Makerspace</div>
+			<div class="home-maker__title"><a href="/makerspace">Makerspace</a></div>
 			<div class="home-maker__hours">
 				<div>Staffed Hours</div>
 				<span>Mondays:</span>1-7pm<br/>
@@ -164,7 +165,7 @@ title: Home
 
 		<!-- spatial tech: -->
 		<section class="home__spatial-tech">
-			<div class="home-spatial__title">Spatial Technologies</div>
+			<div class="home-spatial__title"><a href="/spatial-technologies">Spatial Technologies</a></div>
 			<div class="home-spatial__text">
 				<p><strong>Experts at thinking about space+time.</strong></p>
 				<p>We've got experts in GIS and other mapping approaches (including our own <a href="http://neatline.org">Neatline</a> project for telling stories that combine timelines+maps), cultural heritage informatics, augmented reality, virtual reality, 3D modeling, photogrammetry and scanning, aerial footage, and more.</p>
