Additional work on Open Graph metadata.
- Adds front matter defaults for page and post types. Creates a
page.ogtype default for each. Static pages receive a 'website' value,
while blog posts receive an 'article' value.
- Adds `excerpt` to frontmatter for several pages, to demonstrate how it
would work in a rich object; Checks for that value in displaying the
og:description element.
- Adds title distinction in OG elements:
  - og:title for the page/post title.
  - og:site_title for the broader site title.
- Prepends absolute URL to og:url element.
- Some syntax cleanup:
  - Removes whitespace and line breaks around `fulltitle` variable.
  - Removes trailing `/` on OG elements, for consistency with the rest
of the codebase.

Refs #15.

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,6 +2,7 @@
 layout: default
 title: Blog
 permalink: /blog/
+excerpt: "Our thoughts, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their scholarship."
 nav: true
 order: 2
 status: almost done
