--- a/pages/events.html
+++ b/pages/events.html
@@ -2,6 +2,7 @@
 layout: default
 title: Events
 permalink: /events/
+excerpt: "Current and past events hosted, sponsored, or partnered on by the Scholars' Lab."
 nav: true
 order: 4
 status: prototype done
