--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -2,6 +2,7 @@
 layout: default
 title: Makerspace
 permalink: /makerspace/
+excerpt: "Our makerspace is a place for crafting, tinkering, and experimentation with technologies like 3D printing, sewing, physical computing, and augmented reality. Open to everyone."
 nav: true
 order: 8
 status: 3/4 done
