Add breakpoints on landing page text
- Additional font breakpoints

- Change where lines break depending on screen width

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@ title: Home
 	<header class="home-landing-wrapper">
 		<div class="home-landing__big-title">
 			<div class="home-title__text">
-				<!--span>Welcome<br/>to the<br/>Scholars'<br/>Lab.</span-->
-				<!--span>The<br/>Scholars'<br/>Lab is a<br/>community<br/>for experimental<br/>scholarship.</span-->
-				<span>We are<br/>a community<br/>for experimental<br/>scholarship.</span>
+				<span class="show-if-big--css">We are<br/>a community<br/>for experimental<br/>scholarship.</span>
+				<span class="show-if-small--css">We<br/>are a<br/>community<br/>for<br/>experimental<br/>scholarship.</span>
 			</div>
 		</div>
 		<div class="home-landing__hero-text">
