Add 'reversed' Liquid keyword in events for loop
- Fixes #304

- Source:
  https://github.com/Shopify/liquid/wiki/Liquid-for-Designers#for-loops

--- a/pages/events.html
+++ b/pages/events.html
@@ -24,7 +24,7 @@ notes:
 		<div class="events-gallery">
 			{% assign events = site.events | sort: 'start_date' %}
 			<!-- event layout: -->
-			{% for event in events %}
+			{% for event in events reversed %}
 			<section class="events-gallery__item">
 				<div class="events-item__date">
 					<div>{{ event.start_date | date: "%b" }}<br/>{{ event.start_date | date: "%-d" }}</div>
