Remove commented-out section title; add comment re. YAML

--- a/pages/work.html
+++ b/pages/work.html
@@ -39,7 +39,7 @@ order: 3
 
 <div class="research__description">
 	<div class="research-description__text">
-		<!--div class="research-description__title">Our Scholarship</div-->
+		<!-- almost changed to page.excerpt, but 'This page' seems better than 'Here we' & didn't know which to pick -->
 		<p>This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers. (<a href="/about#who-are-the-scholars-in-scholars-lab">We define "scholarship" inclusively</a>.)</p>
 	</div>
 </div>
