Fix missing </div> tag in hours/spaces section of homepage

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ title: Home
 					<li>Open Office Hours</li>
 					<li>Staff offices</li>
 				</ul>
+			</div>
 		</section>
 
 		<!-- events: -->
