Add explicit link to hours and spaces page on 'Find Us' section
- Fixes #312

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ title: Home
 					<li>Staff offices</li>
 				</ul>
 			</div>
+			<p class="home-find__link">See full list of <a href="/hours-and-spaces" aria-label="hours and spaces page">hours &amp; spaces</a>.</p>
 		</section>
 
 		<!-- events: -->
