--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ title: Home
 					<img src="{{ 'assets/img/svg/alderman-floorplan.svg' | relative_url }}" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="Alderman Floorplan - Floor 4">
 					{% include floorplan-markup.html %}
 				</div>
-				<ul><span>Spaces:</span>
+				<ul><!-- commenting out b/c messing w/ JS stuff rn! span>Spaces:</span-->
 					{% assign spaces = site.spaces | sort: 'order' %}
 					{% for space in spaces %}
 					<li data-fill="{{ space.fill-color }}" data-name="{{ space.data-name }}">{{ space.title }}: {{ space.room }}</li>
