change pedagogy page to for students

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ title: Home
 		<!-- student opportunities: -->
 		<section class="home__student-opps">
 			<div class="home-student__content">
-				<div class="home-student__title"><a href="/student-opportunities">Student Opportunities</a></div>
+				<div class="home-student__title"><a href="/for-students">For Students</a></div>
 				<div class="home-student__text">
 					<p>One of our primary missions is to support the work of emerging scholars and digital scholarship practitioners&mdash;particularly UVa graduate students.</p>
 					<p>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.</p>
@@ -158,7 +158,7 @@ title: Home
 				</div>
 			</div>
 			<div class="home-student__img" title="Placeholder image"></div>
-			<div class="home-student__cta"><a href="/student-opportunities">See All</a></div>
+			<div class="home-student__cta"><a href="/for-students">See All</a></div>
 		</section>
 
 		<!-- makerspace -->
