--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -4,18 +4,12 @@ title: Spatial Tech
 permalink: /spatial-technologies/
 nav: true
 order: 6
-status: almost done
-time-required: ~1hr
-notes:
-- Content: blurb done, most other content needed
-- Style: HTML stable, landing page mostly stable, main content 75%
-- NB: time requirement is a repeat - see stats on "Phase 1, Other", #9 for details.
 ---
 
 <div class="spatial-landing-wrapper">
 	<div class="spatial-landing-grid">
 		<div class="spatial-landing__page-title" aria-label="Landing page">
-			<div class="spatial-title__text">Spatial Technologies</div>
+			<div class="spatial-title__text">Spatial Tech</div>
 		</div>
 		<div class="spatial-landing__cube-wrapper-1">
 			<div class="spatial-landing__lines1">
